# jedi

./: CMakeLists.txt  CMakeLists.txt~  Pontos importantes  README.md  README.md~  movebase.py  package.xml  package.xml~
launch/: obiwan.launch  obiwan.launch~  tiago_navigation.launch  tiago_navigation.launch~  yoda.launch  yoda.launch~
mapa1/config/: map.pgm
msg/: PersonDistance.msg  package.xml~
scripts/: closest_person_node.py  closest_person_node.py~  feat_match.py  feat_match_bkp.py  movebase.py  movebase.py~  moveroom1.py  moveroom2.py  moveroom3.py  moveroom4.py  opencv.py  opencv_bkp.py  person.py  person.py~  sift_matching.py  teste.py~
